Install & run Tailwind via the CLI

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "start": "http-server",
-    "build": "./tailwindcss -i input.css -o index.css --minify"
+    "start": "npx tailwindcss -i ./src/input.css -o ./index.css --watch",
+    "build": "npx tailwindcss -i ./src/input.css -o ./index.css --minify"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://www.nadineseidu.info/",
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "tailwindcss": "^3.4.13"
   }
 }
