--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "start": "npx tailwindcss -i ./src/input.css -o ./index.css --watch",
-    "build": "npx tailwindcss -i ./src/input.css -o ./index.css --minify"
+    "build": "tailwindcss -i ./src/input.css -o ./index.css --minify"
   },
   "repository": {
     "type": "git",
@@ -15,7 +14,6 @@
   "license": "ISC",
   "homepage": "https://www.nadineseidu.info/",
   "devDependencies": {
-    "http-server": "^14.1.1",
     "tailwindcss": "^3.4.13"
   }
 }
