--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "license": "ISC",
   "homepage": "https://www.nadineseidu.info/",
   "devDependencies": {
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "3.4.13"
   }
 }
