--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./index.css --minify"
+    "build": "tailwindcss -i ./src/input.css -o ./index.css --minify",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,8 @@
   "license": "ISC",
   "homepage": "https://www.nadineseidu.info/",
   "devDependencies": {
+    "husky": "9.1.6",
+    "prettier": "3.3.3",
     "tailwindcss": "3.4.13"
   }
 }
